--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,20 @@
 </head>
 <body>
     <div id="container">
-        <div id="code-container">
-            <div id="codearea"></div>
+        <h1>
+            RUNTIMED
+        </h1>
+        <div id="content">
+            <div id="code-container" class="rounded">
+                <div id="codearea"></div>
+            </div>
+            <div id="rightbar">
+                <button id="analyze" class="rounded">
+                    Analyze
+                </button>
+                <div id="result" class="rounded"></div>
+            </div>
         </div>
-        <button id="analyze">
-            Analyze
-        </button>
-        <div id="result"></div>
     </div>
 </body>
 </html>
