added logo and description

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,10 @@
 <body>
     <div id="container">
         <h1>
+            <img src="images/Logo.png">
             RUNTIMED
         </h1>
+        <h2>A C++ Time Complexity Calculator</h2>
         <div id="content">
             <div id="code-container" class="rounded">
                 <div id="codearea"></div>
